[package]
name = "previous-state-hash-de-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = "4.5.1"
glob = "0.3.1"
serde = "1.0.196"
serde_derive = "1.0.192"
serde_json = "1.0.113"
